# bastion-gateway

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260518_0001_initial.py
backend/scripts/: load_test.py
backend/src/gateway/: db.py  main.py  models.py  schemas.py
backend/src/gateway/api/: chat.py  health.py  models.py  usage.py
backend/src/gateway/auth/: api_key.py
backend/src/gateway/cache/: redis_cache.py
backend/src/gateway/core/: config.py  logging.py  pricing.py
backend/src/gateway/observability/: metrics.py
backend/src/gateway/providers/: anthropic_provider.py  base.py  bedrock_provider.py  openai_provider.py  registry.py
backend/src/gateway/ratelimit/: redis_bucket.py
backend/src/gateway/routing/: circuit.py  policy.py
backend/tests/: conftest.py  test_cache_key.py  test_circuit.py  test_pricing.py  test_routing.py
docs/: architecture.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
observability/: prometheus.yml
observability/grafana/: dashboards.yml
observability/grafana/dashboards/: llm-gateway.json
showcase/: alerts.html  index.html  providers.html  spend.html  traces.html
